overflow issue

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -69,9 +69,8 @@ body {
 .header {
 	@include hero-img($gradient: $headerGradient, $imgFile: '../img/book-hero.jpg');
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	z-index: 0;
-	overflow-X: hidden;
 
 	&__text-box {
 		display: flex;
